plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'pd.droidapp.fmgr'
    compileSdk 35

    sourceSets {
        main {
            java.srcDirs = ['src/java']
            res.srcDirs = ['src/resource']
            manifest.srcFile('src/AndroidManifest.xml')
        }
        test {
            java.srcDirs = ['src/java-test']
        }
    }

    defaultConfig {
        applicationId "pd.droidapp.fmgr"
        minSdk 29
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.fragment:fragment:1.6.2'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.viewpager2:viewpager2:1.0.0'
    implementation 'com.google.android.material:material:1.10.0'
    implementation 'pd:pd:1.0-SNAPSHOT'
    testImplementation libs.junit
    androidTestImplementation libs.androidx.junit
    androidTestImplementation libs.androidx.espresso.core
}